--- a/en.html
+++ b/en.html
@@ -11,7 +11,9 @@
 <body>
   <div class="page">
     <header class="header page__header">
-      <img src="./images/header-logo.svg" alt="Логотип" class="header__logo" />
+      <a href="#" class="logo">
+        <img src="./images/header-logo.svg" alt="Логотип" class="logo__image" />
+      </a>
       <nav class="header__links-container">
         <ul class="header__links-list">
           <li class="header__link-item">
@@ -70,26 +72,47 @@
       </ul>
     </section>
 
-    <div class="photo-grid page__photo-grid">
-      <img src="./images/photo-grid-train.jpg" alt="View of the window inside the carriage along the aisle"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-atharva-tulsi.jpg" alt="View from the height of clouds on snow-capped mountains"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-tuman.jpg" alt="Hay field in the fog" class="photo-grid__item" />
-      <img src="./images/photo-grid-sochi.jpg" alt="Aerial view of the coniferous forests of Sochi"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-arisa.jpg" alt="View of the wheel of a car driving on ice"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal.jpg" alt="View from the shore of Lake Baikal" class="photo-grid__item" />
-      <img src="./images/photo-grid-elbrus.jpg" alt="Mountain View Elbrus" class="photo-grid__item" />
-      <img src="./images/photo-grid-kondratiev.jpg" alt="Pedestrian crossing road sign" class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-1.jpg" alt="View from the height of clouds on the mountains of Kamchatka"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-2.jpg" alt="View of the Kamchatka field" class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal-2.jpg" alt="View of the mountains of Baikal" class="photo-grid__item" />
-      <img src="./images/photo-grid-ergaki.jpg" alt="View from the height of clouds on the Ergaki mountains"
-        class="photo-grid__item" />
-    </div>
+    <ul class="photo-grid page__photo-grid">
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-train.jpg" alt="View of the window inside the carriage along the aisle" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="View from the height of clouds on snow-capped mountains"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-tuman.jpg" alt="Hay field in the fog" class="photo-grid__item" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-sochi.jpg" alt="Aerial view of the coniferous forests of Sochi"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-arisa.jpg" alt="View of the wheel of a car driving on ice" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-baikal.jpg" alt="View from the shore of Lake Baikal" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-elbrus.jpg" alt="Mountain View Elbrus" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kondratiev.jpg" alt="Pedestrian crossing road sign" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kamchatka-1.jpg" alt="View from the height of clouds on the mountains of Kamchatka"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="View of the Kamchatka field" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="View of the mountains of Baikal" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="View from the height of clouds on the Ergaki mountains" class="photo-grid__item" />
+      </li>
+    </ul>
 
     <section class="places page__places">
       <div class="place">
@@ -117,7 +140,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Kola</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -143,7 +166,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Altai</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -169,7 +192,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Winter Baikal</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -193,7 +216,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Karelia</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -216,19 +239,18 @@
       </div>
     </section>
 
-    <div class="cover page__cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-        <img src="./images/cover-trains.jpg" alt="Вид на транссибирскую железную дорогу" class="cover__image" />
-        <article class="cover__text">
+    <ul class="cover page__cover">
+      <li class="cover__list-item">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <h2 class="cover__title">Up to&nbsp;Baikal "on the dogs"</h2>
           <p class="cover__subtitle">
             Based on the educational topic about the Trans-Siberian Railway
             and iframes - a journey from the capital to Lake Baikal by
             electric train.
           </p>
-        </article>
-      </a>
-    </div>
+        </a>
+      </li>
+    </ul>
 
     <footer class="footer page__footer">
       <nav class="footer__links">
