--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
   <div class="page">
     <header class="header page__header">
-      <img src="./images/header-logo.svg" alt="Логотип" class="header__logo" />
+      <a href="#" class="logo">
+        <img src="./images/header-logo.svg" alt="Логотип" class="logo__image" />
+      </a>
       <nav class="header__links-container">
         <ul class="header__links-list">
           <li class="header__link-item">
@@ -71,27 +73,52 @@
       </ul>
     </section>
 
-    <div class="photo-grid page__photo-grid">
-      <img src="./images/photo-grid-train.jpg" alt="Вид на окно внутри вагона вдоль прохода" class="photo-grid__item" />
-      <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид с высоты облаков на заснежанные горы"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-tuman.jpg" alt="Сенокосное поле в тумане" class="photo-grid__item" />
-      <img src="./images/photo-grid-sochi.jpg" alt="Вид с высоты птичьего полета на хвойные леса Сочи"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-arisa.jpg" alt="Вид на колесо автомобиля, едущего по льду"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal.jpg" alt="Вид с берега на озеро Байкал" class="photo-grid__item" />
-      <img src="./images/photo-grid-elbrus.jpg" alt="Вид на горы Эльбрус" class="photo-grid__item" />
-      <img src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходный переход" class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид с высоты облаков на горы Камчатки"
-        class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на поле Камчатки" class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы Байкала" class="photo-grid__item" />
-      <img src="./images/photo-grid-ergaki.jpg" alt="Вид с высоты облаков на горы Эргаки" class="photo-grid__item" />
-    </div>
+    <ul class="photo-grid page__photo-grid">
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-train.jpg" alt="Вид на окно внутри вагона вдоль прохода"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид с высоты облаков на заснежанные горы"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-tuman.jpg" alt="Сенокосное поле в тумане" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-sochi.jpg" alt="Вид с высоты птичьего полета на хвойные леса Сочи"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-arisa.jpg" alt="Вид на колесо автомобиля, едущего по льду"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-baikal.jpg" alt="Вид с берега на озеро Байкал" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-elbrus.jpg" alt="Вид на горы Эльбрус" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходный переход" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид с высоты облаков на горы Камчатки"
+          class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на поле Камчатки" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы Байкала" class="photo-grid__item" />
+      </li>
+      <li class="photo-grid__list-item">
+        <img src="./images/photo-grid-ergaki.jpg" alt="Вид с высоты облаков на горы Эргаки" class="photo-grid__item" />
+      </li>
+    </ul>
 
     <section class="places page__places">
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -116,7 +143,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -142,7 +169,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -167,7 +194,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -191,7 +218,7 @@
         </div>
       </div>
 
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
@@ -214,18 +241,17 @@
       </div>
     </section>
 
-    <div class="cover page__cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-        <img src="./images/cover-trains.jpg" alt="Вид на транссибирскую железную дорогу" class="cover__image" />
-        <article class="cover__text">
+    <ul class="cover page__cover">
+      <li class="cover__list-item">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе и iframes — путешествие от
             столицы до Байкала на электричках.
           </p>
-        </article>
-      </a>
-    </div>
+        </a>
+      </li>
+    </ul>
 
     <footer class="footer page__footer">
       <nav class="footer__links">
