added mix to class place

--- a/en.html
+++ b/en.html
@@ -115,7 +115,7 @@
     </ul>
 
     <section class="places page__places">
-      <div class="place">
+      <div class="place places__place">
         <h2 class="place__title">Curonian Spit</h2>
         <div class="place__website">
           <h3 class="place__url-heading">URL</h3>
