fixed notes (attempt 2)

--- a/index.html
+++ b/index.html
@@ -73,49 +73,53 @@
       </ul>
     </section>
 
-    <ul class="photo-grid page__photo-grid">
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-train.jpg" alt="Вид на окно внутри вагона вдоль прохода"
-          class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид с высоты облаков на заснежанные горы"
-          class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-tuman.jpg" alt="Сенокосное поле в тумане" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-sochi.jpg" alt="Вид с высоты птичьего полета на хвойные леса Сочи"
-          class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-arisa.jpg" alt="Вид на колесо автомобиля, едущего по льду"
-          class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-baikal.jpg" alt="Вид с берега на озеро Байкал" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="Вид на горы Эльбрус" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходный переход" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид с высоты облаков на горы Камчатки"
-          class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на поле Камчатки" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы Байкала" class="photo-grid__item" />
-      </li>
-      <li class="photo-grid__list-item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="Вид с высоты облаков на горы Эргаки" class="photo-grid__item" />
-      </li>
-    </ul>
+    <section class="photo-grid page__photo-grid">
+      <ul class="photo-grid__list">
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-train.jpg" alt="Вид на окно внутри вагона вдоль прохода"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид с высоты облаков на заснежанные горы"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-tuman.jpg" alt="Сенокосное поле в тумане" class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-sochi.jpg" alt="Вид с высоты птичьего полета на хвойные леса Сочи"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-arisa.jpg" alt="Вид на колесо автомобиля, едущего по льду"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-baikal.jpg" alt="Вид с берега на озеро Байкал" class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-elbrus.jpg" alt="Вид на горы Эльбрус" class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходный переход"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид с высоты облаков на горы Камчатки"
+            class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на поле Камчатки" class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы Байкала" class="photo-grid__item" />
+        </li>
+        <li class="photo-grid__list-item">
+          <img src="./images/photo-grid-ergaki.jpg" alt="Вид с высоты облаков на горы Эргаки"
+            class="photo-grid__item" />
+        </li>
+      </ul>
+    </section>
 
     <section class="places page__places">
       <div class="place places__place">
@@ -241,17 +245,19 @@
       </div>
     </section>
 
-    <ul class="cover page__cover">
-      <li class="cover__list-item">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-          <h2 class="cover__title">До&nbsp;Байкала «на собаках»</h2>
-          <p class="cover__subtitle">
-            По мотивам учебной темы о Транссибе и iframes — путешествие от
-            столицы до Байкала на электричках.
-          </p>
-        </a>
-      </li>
-    </ul>
+    <section class="cover page__cover">
+      <ul class="cover__list">
+        <li class="cover__list-item">
+          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+            <h2 class="cover__title">До&nbsp;Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе и iframes — путешествие от
+              столицы до Байкала на электричках.
+            </p>
+          </a>
+        </li>
+      </ul>
+    </section>
 
     <footer class="footer page__footer">
       <nav class="footer__links">
